--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@ MONERO_RPC_HOST=127.0.0.1
 MONERO_RPC_PORT=18081
 MONERO_RPC_USER=
 MONERO_RPC_PASSWORD=
+# Imposta a 'true' se il nodo espone RPC via HTTPS
+# MONERO_RPC_HTTPS=false
 
 # Server Express
 PORT=3000
 NODE_ENV=development
+
+# Segreto per le sessioni (cambia questo valore in produzione)
+SESSION_SECRET=change-me-please
